--- a/ProjetoIntegrador/2-CNPJ-CPF.html
+++ b/ProjetoIntegrador/2-CNPJ-CPF.html
@@ -23,7 +23,7 @@
             <input
               required
               type="radio"
-              onclick="cpf()"
+              onclick="cpfEcnpj()"
               requer
               id="pf"
               name="documento"
@@ -34,7 +34,7 @@
             <label>CNPJ</label>
             <input
               required
-              onclick="cnpj()"
+              onclick="cpfEcnpj()"
               type="radio"
               requer
               id="pj"
