--- a/ProjetoIntegrador/5-configuracao.html
+++ b/ProjetoIntegrador/5-configuracao.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    
     <link rel="stylesheet" href="CSS/style.css">
 </head>
-<header>
-    <a href="1-login.html"><img src="img/logo-sem-fundo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
-</header>
 <body>
+    <header>
+        <a href="1-login.html"><img src="img/logo-sem-fundo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
+    </header>
     <h1 class=" d-flex align-self-center justify-content-center">Configuração da conta</h1>
         <div class="div-foto-perfil  d-flex align-self-center justify-content-center">
             <img src="img/profile-icon.webp" id="foto" alt="Foto de perfil do usuario">
@@ -21,13 +21,14 @@
         <main class="alinhamento">  
             <form method="post" onsubmit="sucesso(); return false;">
                 <div class="mb-3">
-                    <label for="">CEP</label>
+                    <label for="cep">CEP</label>
                         <input
                           type="text"
                           class="form-control"
                           onkeypress="$(this).mask('00.000-000')"
                           required
                           minlength="10"
+                          id="cep"
                         />
                         <label>Estado</label>
                         <input
@@ -63,14 +64,14 @@
                             <select name="estado" id="estado" >
                                 <option value="SP">São Paulo</option>
                             </select> 
-                            <select required name="Cidade" id="Cidade">
+                            <select name="Cidade" id="Cidade">
                                 <option value="Matão">Matão</option>
                                 <option value="Araraquara">Araraquara</option>
                                 <option value="Campinas">Campians</option>
                                 <option value="Ribeirão Preto">Ribeirão Preto</option>
                                 <option value="São Carlos">São Carlos</option>
                             </select> 
-                </div>
+
                 <div id="campo-cartão">
                             <div class="mb-3">
                                 <label>Nome Cartão</label>
@@ -96,7 +97,7 @@
                                 minlength="3"
                               />
                                 <label> Data de expiração:</label>
-                                <select required>
+                                <select>
                                     <option value='01'>Janeiro</option>
                                     <option value='02'>Fevereiro</option>
                                     <option value='03'>Março</option>
@@ -110,7 +111,7 @@
                                     <option value='11'>Novembro</option>
                                     <option value='12'>Dezembro</option>
                                 </select> 
-                                    <select required name='anoexpiração' id='anoexpiração'>
+                                    <select name='anoexpiração' id='anoexpiração'>
                                         <option value='20'>2020</option>
                                         <option value='21'>2021</option>
                                         <option value='22'>2022</option>
@@ -121,7 +122,7 @@
                 </div>
                 <div class="button">
                     <button type="submit" class="submit1">Salvar</button>
-                    <a href="4-cadastroprod.html"><button type="submit" class="submit1">Configuração da loja</button></a>
+                    <button type="submit" class="submit1">Configuração da loja</button>
                     <button type="reset" class="submit1">Limpar</button>
                 </div>
                 <p id="sucesso">Configurado com sucesso</p>
