--- a/ProjetoIntegrador/carrinho2 copy.html
+++ b/ProjetoIntegrador/carrinho2 copy.html
@@ -148,7 +148,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <div id="tipoAtendimento" class="container2">
+          <div id="tipoAtendimento" class="containerX">
             <h2>Tipo de Atendimento</h2>
             <div>
               <label>Entrega</label>
@@ -186,13 +186,13 @@
                 <label>Rua</label>
                 <input type="text"  minlength="1" id="rua" class="form-control" />
                 <label>Estado</label>
-                <select class="form-control" name="" id="">
+                <select class="form-control" name="estado" id="estado">
                   <option value="SP">SP</option>
                 </select>
                 <label>Cidade</label>
                 <input class="form-control" type="text"  minlength="1" id="cidade" />
                 <label>Número</label>
-                <input class="form-control" type="text"  minlength="1" id="numero" />
+                <input class="form-control" type="number"  minlength="1" id="numero" />
                 <label>CEP</label>
                 <input
                 class="form-control"
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="col-sm">
-          <div id="formaPagamento" class="container2">
+          <div id="formaPagamento" class="containerX">
             <h2>Forma de Pagamento</h2>
             <div>
               <label>Dinheiro</label>
@@ -297,15 +297,16 @@
       <input onclick="opcoesPIX()" type="radio" name="pix" id="radioPixEmail" value="pixEmail">
       <label for="radioPixKey">Chave Aleatória</label>
       <input onclick="opcoesPIX()" type="radio" name="pix" id="radioPixKey" value="pixKey">
+    
       <div id="inputPIX">
           <label id="labelPixCPF" for="inputPixCPF">CPF</label>
-          <input class="form-control"   type="text" id="inputPixCPF">
+          <input class="form-control"   type="text" id="inputPixCPF" onkeypress="$(this).mask('000.000.000-00')" minlength="14">
           <label id="labelPixTelefone" class="pixFone"  for="inputPixTelefone">Telefone</label>
-          <input class="form-control"   type="text" id="inputPixTelefone">
+          <input class="form-control"   type="text" id="inputPixTelefone" onkeypress="$(this).mask('(00)00000-0000')" minlength="13">
           <label id="labelPixEmail" class="pixEmail"  for="inputPixEmail">E-mail</label>
           <input class="form-control"   type="text" id="inputPixEmail">
           <label id="labelPixKey" class="pixKey"  for="inputPixKey">Chave Aleatória</label>
-          <input class="form-control"   type="text" id="inputPixKey">
+          <input class="form-control"   type="text" id="inputPixKey" onkeypress="$(this).mask('00000000000000000000000000000000')" minlength="32">
       </div>
     </div>
           </div>
@@ -321,13 +322,15 @@
 
   </form>
 
-    <!-- Optional JavaScript -->
-    <script src="JS/cliente.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+    <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- JavaScript -->
+    <script src="JS/cliente.js"></script>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
   </body>
 </html>
