--- a/ProjetoIntegrador/carrinho2 copy.html
+++ b/ProjetoIntegrador/carrinho2 copy.html
@@ -37,7 +37,8 @@
                 </div>
                 <div class="col">
                   <div class="row">
-                    <div name="plus" class="plus">
+                    <div name="plus" class="plus"
+                    id="plus1">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="30"
@@ -54,7 +55,8 @@
                         />
                       </svg>
                     </div> 
-                    <div name="minus" class="minus">
+                    <div name="minus" class="minus"
+                    id="minus1">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="30"
@@ -76,7 +78,8 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <p class="qtdProduto">Quantidade: 0</p>
+                  <p
+                   class="qtdProduto">Quantidade: <p id="qtdProduto1">0</p></p>
                 </div>
               </div>              
             </div>
@@ -100,7 +103,8 @@
                 </div>
                 <div class="col">
                   <div class="row">
-                    <div name="plus" class="plus">
+                    <div name="plus" class="plus"
+                    id="plus2">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="30"
@@ -117,7 +121,8 @@
                         />
                       </svg>
                     </div> 
-                    <div name="minus" class="minus">
+                    <div name="minus" class="minus"
+                    id="minus2">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="30"
@@ -139,7 +144,8 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <p class="qtdProduto">Quantidade: 0</p>
+                  <p
+                  class="qtdProduto">Quantidade: <p id="qtdProduto2">0</p></p>  
                 </div>
               </div>              
             </div>
@@ -314,7 +320,9 @@
       </div>
       <div class="row">
         <div class="col">
-          <p id="sucesso">Pedido realizado com sucesso</p>
+          <div id="sucesso" class="alert alert-success" role="alert">
+            Pedido realizado com sucesso
+          </div>
           <button class="submit1" type="submit">Confirma</button>
         </div>
       </div>
