Alterações feitas nas paginas da loja

--- a/ProjetoIntegrador/base.html
+++ b/ProjetoIntegrador/base.html
@@ -46,6 +46,15 @@
     />
     <link rel="stylesheet" href="CSS/lucas.css" />
     <title>Top Burguer</title>
+    <style>
+      body {
+          min-width: 372px;
+      }
+
+      .wrapper {
+          min-height: 100vh;
+      }
+  </style>
   </head>
   <body>
     <div class="d-flex flex-column wrapper">
