--- a/ProjetoIntegrador/produto.html
+++ b/ProjetoIntegrador/produto.html
@@ -32,16 +32,24 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="CSS/lucas.css">
+        <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
         <title>Top Burguer :: Produto</title>
+        <style>
+            body {
+                min-width: 372px;
+            }
+    
+            .wrapper {
+                min-height: 100vh;
+            }
+        </style>
     </head>
     <body>
         <div class="d-flex flex-column wrapper">
             <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="loja.html">
                         <strong>Top Burguer</strong>
                     </a>
                     <button
@@ -55,7 +63,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link active text-white" href="/index.html">Principal</a>
+                                <a class="nav-link active text-white" href="loja.html">Principal</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="contato.html">Contato</a>
@@ -87,7 +95,7 @@
                 <div class="container">
                     <div class="row g-3">
                         <div class="col-12 col-sm-6">
-                            <img src="/img/Lanches/x-costela.png" class="img-thumbnail" id="imgProduto">
+                            <img src="/ProjetoIntegrador/img/Lanches/x-costela.png" class="img-thumbnail" id="imgProduto">
                         </div>
                         <div class="col-12 col-sm-6">
                             <h1>X-costela</h1>
@@ -139,6 +147,6 @@
                 </div>
             </footer>
         </div>
-        <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/ProjetoIntegrador/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
