--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -32,10 +32,18 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="CSS/lucas.css">
+        <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
         <title>Top Burguer</title>
+        <style>
+            body {
+                min-width: 372px;
+            }
+    
+            .wrapper {
+                min-height: 100vh;
+            }
+        </style>
     </head>
     <body>
         <div class="d-flex flex-column wrapper">
@@ -55,7 +63,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link active text-white" href="/index.html">Principal</a>
+                                <a class="nav-link active text-white" href="loja.html">Principal</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="contato.html">Contato</a>
@@ -184,7 +192,7 @@
                                 <a href="#" class="position-absolute end-0 p-2 text-danger">
                                     <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                                 </a>
-                                <img src="/img/Lanches/chedar-bacon.png" class="card-img-top">
+                                <img src="/ProjetoIntegrador/img/Lanches/chedar-bacon.png" class="card-img-top">
                                 <div class="card-header">
                                     R$ 14,50
                                 </div>
@@ -206,7 +214,7 @@
                                 <a href="#" class="position-absolute end-0 p-2 text-danger">
                                     <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                                 </a>
-                                <img src="/img/Lanches/hamburguer.png" class="card-img-top">
+                                <img src="/ProjetoIntegrador/img/Lanches/hamburguer.png" class="card-img-top">
                                 <div class="card-header">
                                     R$ 12,50
                                 </div>
@@ -229,7 +237,7 @@
                                 <a href="#" class="position-absolute end-0 p-2 text-danger">
                                     <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                                 </a>
-                                <img src="/img/Lanches/hotdog.png" class="card-img-top">
+                                <img src="/ProjetoIntegrador/img/Lanches/hotdog.png" class="card-img-top">
                                 <div class="card-header">
                                     R$ 12,50
                                 </div>
@@ -255,7 +263,7 @@
                                 <a href="#" class="position-absolute end-0 p-2 text-danger">
                                     <i class="bi-suit-heart-fill" style="font-size: 24px; line-height: 24px;"></i>
                                 </a>
-                                <img src="/img/Lanches/x-bacon.png" class="card-img-top">
+                                <img src="/ProjetoIntegrador/img/Lanches/x-bacon.png" class="card-img-top">
                                 <div class="card-header">
                                     R$ 14,50
                                 </div>
@@ -278,8 +286,8 @@
                                 <a href="#" class="position-absolute end-0 p-2 text-danger">
                                     <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                                 </a>
-                                <a href="/produto.html">
-                                    <img src="/img/Lanches/x-costela.png" class="card-img-top">
+                                <a href="/ProjetoIntegrador/produto.html">
+                                    <img src="/ProjetoIntegrador/img/Lanches/x-costela.png" class="card-img-top">
                                 </a>
                                 <div class="card-header">
                                     R$ 16,50
@@ -303,7 +311,7 @@
                                 <a href="#" class="position-absolute end-0 p-2 text-danger">
                                     <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                                 </a>
-                                <img src="/img/Lanches/x-queijo.png" class="card-img-top">
+                                <img src="/ProjetoIntegrador/img/Lanches/x-queijo.png" class="card-img-top">
                                 <div class="card-header">
                                     R$ 14,50
                                 </div>
@@ -396,6 +404,6 @@
                 </div>
             </footer>
         </div>
-        <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/ProjetoIntegrador/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
